--- a/src/main/webapp/myStyle.css
+++ b/src/main/webapp/myStyle.css
@@ -1,12 +1,8 @@
 * {box-sizing: border-box}
-
-/* Add padding to containers */
 .container {
   padding: 15px;
   
 }
-
-/* Full-width input fields */
 input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
@@ -21,14 +17,11 @@ input[type=text]:focus, input[type=password]:focus {
   outline: none;
 
 }
-
-/* Overwrite default styles of hr */
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
 }
 
-/* Set a style for the submit/register button */
 .registerbtn {
   background-color: #04AA6D;
   color: white;
@@ -43,14 +36,11 @@ hr {
 .registerbtn:hover {
   opacity:1;
 }
-
-/* Add a blue text color to links */
 a {
   color: dodgerblue;
 }
 
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
+.signup {
   background-color: #f1f1f1;
   text-align: center;
 }
@@ -82,4 +72,50 @@ form{
 .register {
   background-color: #f1f1f1;
  text-align: center;
+}
+
+/*===========================*/
+.tabs {
+  max-width: 600px;
+  margin: 50px auto;
+}
+
+.tabs__nav {
+  display: flex;
+}
+
+.tabs__nav-btn {
+  padding: 15px 30px;
+  font-size: 20px;
+  background-color: #f5f5f5;
+  border: 0;
+  border-right: 1px solid #ddd;
+  cursor: pointer;
+}
+
+.tabs__nav-btn:last-child {
+  border-right: none;
+}
+
+.tabs__nav-btn:hover {
+  background-color: #ddd;
+}
+
+.tabs__nav-btn.active {
+  background-color: #5e3ddf;
+  border-right-color: #5e3ddf;
+  color: #fff;
+}
+
+.tabs__content {
+  padding: 30px;
+  background-color: #fff;
+}
+
+.tabs__item {
+  display: none;
+}
+
+.tabs__item.active {
+  display: block;
 }
