--- a/src/main/webapp/myStyle.css
+++ b/src/main/webapp/myStyle.css
@@ -74,48 +74,27 @@ form{
  text-align: center;
 }
 
-/*===========================*/
-.tabs {
-  max-width: 600px;
-  margin: 50px auto;
+.my-menu{
+  overflow: hidden;
+  background-color: #04AA6D;
 }
-
-.tabs__nav {
-  display: flex;
+.my-menu a{
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-
-.tabs__nav-btn {
-  padding: 15px 30px;
-  font-size: 20px;
-  background-color: #f5f5f5;
-  border: 0;
-  border-right: 1px solid #ddd;
-  cursor: pointer;
-}
-
-.tabs__nav-btn:last-child {
-  border-right: none;
-}
-
-.tabs__nav-btn:hover {
+.my-menu a:hover {
   background-color: #ddd;
+  color: black;
 }
 
-.tabs__nav-btn.active {
-  background-color: #5e3ddf;
-  border-right-color: #5e3ddf;
-  color: #fff;
+.active{
+  background-color: #04AA6D;
+  color: white;
 }
-
-.tabs__content {
-  padding: 30px;
-  background-color: #fff;
-}
-
-.tabs__item {
-  display: none;
-}
-
-.tabs__item.active {
-  display: block;
+.my-info{
+    font-weight: 600;
 }
