--- a/src/main/webapp/myStyle2.css
+++ b/src/main/webapp/myStyle2.css
@@ -58,19 +58,7 @@ hr {
     text-align: left;
     vertical-align: top;
 }
-input[type=text], input[type=password] {
-    width: 100%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
-    border: none;
-    background: #f1f1f1;
-}
 
-input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
-    outline: none;
-}
 .mybtn {
     background-color: #04AA6D;
     color: white;
@@ -85,3 +73,15 @@ input[type=text]:focus, input[type=password]:focus {
     text-align: center;
     vertical-align: middle;
 }
+
+#okno .content {
+    width: 300px;
+    height: 50px;
+    text-align: center;
+    padding: 15px;
+    border: 3px solid #0000cc;
+    border-radius: 10px;
+    color: #0000cc;
+    display: none;
+}
+#okno .content :target {display: block;}
