--- a/src/main/webapp/WEB-INF/jspf/head.jspf
+++ b/src/main/webapp/WEB-INF/jspf/head.jspf
@@ -3,5 +3,5 @@
     <title>
         ${pageScope.title}
     </title>
-    <link href="myStyle3.css" rel = "stylesheet" media="screen" type="text/css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel = "stylesheet">
 </head>
