--- a/src/main/webapp/myStyle.css
+++ b/src/main/webapp/myStyle.css
@@ -1,60 +1,48 @@
-/** {box-sizing: border-box}*/
-/*.container {*/
-/*  padding: 15px;*/
-/*}*/
-/*input[type=text], input[type=password] {*/
-/*  width: 100%;*/
-/*  padding: 15px;*/
-/*  margin: 5px 0 22px 0;*/
-/*  display: inline-block;*/
-/*  border: none;*/
-/*  background: #f1f1f1;*/
-/*}*/
 
-/*input[type=text]:focus, input[type=password]:focus {*/
-/*  background-color: #ddd;*/
-/*  outline: none;*/
-
-/*}*/
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 15px;
+.js-sort-table{
+  table-layout: fixed;
+  width: 100%;
+  border:1px solid black;
+  border-collapse: collapse;
+}
+#js-sort-table td{
+  border:1px solid black;
 }
 
-/*.registerbtn {*/
-/*  background-color: #04AA6D;*/
-/*  color: white;*/
-/*  padding: 16px 20px;*/
-/*  margin: 8px 0;*/
-/*  border: none;*/
-/*  cursor: pointer;*/
-/*  width: 100%;*/
-/*  opacity: 0.9;*/
-/*}*/
 
-/*.registerbtn:hover {*/
-/*  opacity:1;*/
-/*}*/
-a {
-  color: dodgerblue;
+.outgoing {
+  background-color: #ffe3ea;
+}
+.incoming {
+  background-color: #cee6f5;
 }
 
-/*.signup {*/
-/*  background-color: #f1f1f1;*/
-/*  text-align: center;*/
-/*}*/
-
-h1{
-	text-align: center;
+.center {
+  text-align: center;
+  vertical-align: middle;
 }
 
-/*form{*/
-/*	*/
-/*	margin-left: 200px;*/
-/*	margin-right: 200px;*/
-/*}*/
+#okno {
+  width: 300px;
+  height: 125px;
+  text-align: center;
+  padding: 15px;
+  border: 3px solid #0000cc;
+  border-radius: 10px;
+  color: #0000cc;
+  display: none;
+}
+#okno:target {display: block;}
 
-.loginbtn {
+#okno input[type=number] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+.mybtn {
   background-color: #04AA6D;
   color: white;
   padding: 16px 20px;
@@ -65,89 +53,70 @@ h1{
   opacity: 0.9;
 }
 
-.loginbtn:hover {
-  opacity:1;
-}
-
-/*.my-menu{*/
-/*  overflow: hidden;*/
-/*  background-color: #04AA6D;*/
-/*}*/
-/*.my-menu a{*/
-/*  float: left;*/
-/*  color: #f2f2f2;*/
-/*  text-align: center;*/
-/*  padding: 14px 16px;*/
-/*  text-decoration: none;*/
-/*  font-size: 17px;*/
-/*}*/
-/*.my-menu a:hover {*/
-/*  background-color: #ddd;*/
-/*  color: black;*/
-/*}*/
-
-/*.active{*/
-/*  background-color: #04AA6D;*/
-/*  color: white;*/
-/*}*/
-/*.my-info{*/
-/*    font-weight: 600;*/
-/*}*/
-
-
-table {
-  border-collapse:collapse;
-}
-td {
-  border:1px solid black;
-  padding: 2px;
-}
-body {
-  margin: 0;
-}
-#main-container {
-  width: 100%;
+.content {
   height: 100%;
+  padding-left: 200px;
+  padding-right: 200px;
+  padding-top: 10px;
+  text-align: left;
+  vertical-align: top;
 }
 
-/***************************************************************
-Header style (TD tag in the first top row)
-***************************************************************/
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
 #header {
-  background: #AAAAFF;
+  overflow: hidden;
+  background-color: #04AA6D;
   padding: 0px;
 }
 
-/***************************************************************
-Style for the left located head menu (DIV tag at left)
-***************************************************************/
+#header a{
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
 #leftHeader {
-  background: #AAAAFF;
   float: left;
   margin-left: 10px;
   padding: 2px;
 }
 
-/***************************************************************
-Style for the right located head menu (DIV tag at right)
-***************************************************************/
 #rightHeader {
-  background: #AAAAFF;
   float: right;
   text-align: right;
   margin-right: 10px;
   padding: 2px;
 }
 
-/***************************************************************
-Content styles (TD tag in the main middle row)
-***************************************************************/
-.content {
+#header, #footer, .content {
+  border: 0px solid;
+}
+#main-container {
+  width: 100%;
   height: 100%;
-  background: #BBBBFF;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
-  text-align: left;
-  vertical-align: top;
+}
+.settings-table{
+  width: 100%;
+  height: 100%;
+  border:1px solid black;
+  border-collapse: collapse;
+}
+.settings-table tr>td{
+  padding: 5px;
 }
