--- a/src/main/webapp/myStyle.css
+++ b/src/main/webapp/myStyle.css
@@ -1,20 +1,10 @@
 
-.js-sort-table{
-  table-layout: fixed;
-  width: 100%;
-  border:1px solid black;
-  border-collapse: collapse;
-}
-#js-sort-table td{
-  border:1px solid black;
-}
-
 
 .outgoing {
-  background-color: #ffe3ea;
+  background-color: #ffe3ea !important;
 }
 .incoming {
-  background-color: #cee6f5;
+  background-color: #cee6f5 !important;
 }
 
 .center {
@@ -55,8 +45,8 @@
 
 .content {
   height: 100%;
-  padding-left: 200px;
-  padding-right: 200px;
+  padding-left: 80px;
+  padding-right: 80px;
   padding-top: 10px;
   text-align: left;
   vertical-align: top;
@@ -110,13 +100,4 @@ input[type=text]:focus, input[type=password]:focus {
 #main-container {
   width: 100%;
   height: 100%;
-}
-.settings-table{
-  width: 100%;
-  height: 100%;
-  border:1px solid black;
-  border-collapse: collapse;
-}
-.settings-table tr>td{
-  padding: 5px;
 }
