--- a/src/main/webapp/WEB-INF/jspf/head.jspf
+++ b/src/main/webapp/WEB-INF/jspf/head.jspf
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/fixedheader/3.1.7/css/fixedHeader.bootstrap.min.css">
     <link rel="stylesheet" href=" https://cdn.datatables.net/responsive/2.2.6/css/responsive.bootstrap.min.css">
     <link href="myStyle2.css" rel = "stylesheet" media="screen" type="text/css">
-    <fmt:setBundle basename="localization_en_US"/>
-<%--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel = "stylesheet">--%>
-<%--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>--%>
-<%--    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>--%>
-<%--    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>--%>
-<%--    <script src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap4.min.js"></script>--%>
-<%--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>--%>
-<%--    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>--%>
-<%--    <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.js"></script>--%>
-<%--    <script src="https://unpkg.com/tableexport.jquery.plugin/tableExport.min.js"></script>--%>
-<%--    <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table.min.js"></script>--%>
-<%--    <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/bootstrap-table-locale-all.min.js"></script>--%>
-<%--    <script src="https://unpkg.com/bootstrap-table@1.19.1/dist/extensions/export/bootstrap-table-export.min.js"></script>--%>
+    <c:choose>
+        <c:when test="${not empty applicationScope.language}">
+            <c:if test="${applicationScope.language eq 'ru_RU'}">
+                <fmt:setBundle basename="localization_ru_RU"/>
+            </c:if>
+            <c:if test="${applicationScope.language eq 'en_US'}">
+                <fmt:setBundle basename="localization_en_US"/>
+            </c:if>
+        </c:when>
+        <c:otherwise>
+            <fmt:setBundle basename="localization_en_US"/>
+        </c:otherwise>
+    </c:choose>
+
 </head>
