--- a/src/main/webapp/myStyle2.css
+++ b/src/main/webapp/myStyle2.css
@@ -12,7 +12,7 @@
     vertical-align: middle;
 }
 
-#okno {
+#windowTopUp {
     width: 300px;
     height: 225px;
     text-align: center;
@@ -22,9 +22,9 @@
     color: #0000cc;
     display: none;
 }
-#okno:target {display: block;}
+#windowTopUp:target {display: block;}
 
-#okno input[type=number] {
+#windowTopUp input[type=number] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
