--- a/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -2,25 +2,23 @@
 <%@ include file="/WEB-INF/jspf/tags.jspf" %>
 <%@ page import="com.my.payment.db.Role" %>
 <%@ page import="com.my.payment.constants.Path" %>
-<tr>
-    <td id="header">
-        <div id="leftHeader">
-            <a href="${Path.USER_CABINET}">
-                <fmt:message key="menu.cabinet"/>
+<div id="header">
+    <div id="leftHeader">
+        <a href="${Path.USER_CABINET}">
+            <fmt:message key="menu.cabinet"/>
+        </a>
+        <a href="controller?command=getCards">
+            <fmt:message key="menu.cards"/>
+        </a>
+        <c:if test="${sessionScope.userRole == Role.ADMIN}">
+            <a href="controller?command=getUsers">
+                <fmt:message key="menu.users"/>
             </a>
-            <a href="controller?command=getCards">
-                <fmt:message key="menu.cards"/>
-            </a>
-            <c:if test="${sessionScope.userRole == Role.ADMIN}">
-                <a href="controller?command=getUsers">
-                    <fmt:message key="menu.users"/>
-                </a>
-            </c:if>
-        </div>
-        <div id="rightHeader">
-            <a href="controller?command=logout">
-                <fmt:message key="menu.leave"/>
-            </a>
-        </div>
-    </td>
-</tr>
+        </c:if>
+    </div>
+    <div id="rightHeader">
+        <a href="controller?command=logout">
+            <fmt:message key="menu.leave"/>
+        </a>
+    </div>
+</div>
