--- a/src/main/webapp/main.css
+++ b/src/main/webapp/main.css
@@ -102,7 +102,7 @@ input[type=text]:focus, input[type=password]:focus {
     padding: 2px;
 }
 
-#header, #footer, .content {
+#header, #footer{
     border: 0 solid;
 }
 #main-container {
@@ -125,4 +125,10 @@ input[type=text]:focus, input[type=password]:focus {
 .mybtn-wrapper{
     padding-bottom: 40px;
     padding-left: 170px;
+}
+.container-input{
+    width: 500px;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
 }
