--- a/src/main/webapp/myStyle2.css
+++ b/src/main/webapp/myStyle2.css
@@ -12,7 +12,7 @@
     vertical-align: middle;
 }
 
-#windowTopUp {
+#windowTopUp, #windowName{
     width: 300px;
     height: 225px;
     text-align: center;
@@ -23,8 +23,16 @@
     display: none;
 }
 #windowTopUp:target {display: block;}
+#windowName:target {display: block;}
 
 #windowTopUp input[type=number] {
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+}
+#windowName input[type=text] {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -39,7 +47,7 @@
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 200px;
     opacity: 0.9;
 }
 
@@ -53,7 +61,7 @@
 }
 
 input[type=text], input[type=password] {
-    width: 100%;
+    width: 500px;
     padding: 15px;
     margin: 5px 0 22px 0;
     display: inline-block;
@@ -69,7 +77,7 @@ input[type=text]:focus, input[type=password]:focus {
 #header {
     overflow: hidden;
     background-color: #04AA6D;
-    padding: 0px;
+    padding: 0;
 }
 
 #header a{
@@ -94,10 +102,33 @@ input[type=text]:focus, input[type=password]:focus {
     padding: 2px;
 }
 
-#header, #footer, .content {
-    border: 0px solid;
+#header, #footer{
+    border: 0 solid;
 }
 #main-container {
     width: 100%;
     height: 100%;
+}
+
+.login-form{
+    height: 850px;
+    width: 500px;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.limit {
+    display: flex;
+    justify-content: space-between;
+}
+.mybtn-wrapper{
+    padding-bottom: 40px;
+    padding-left: 170px;
+}
+.container-input{
+    width: 500px;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
 }
